parser.output
Terminals unused in grammar

    "Float"
    "JSON Array"
    "Dot (.)"
    "Unsigned Integer Array"
    "sign"


Grammar

    0 $accept: program T_EOF

    1 program: "Left Brace ({)" last "Comma (,)" active "Right Brace (})"
    2        | "Left Brace ({)" order "Right Brace (})"
    3        | error

    4 last_scope: expr "Comma (,)" last_scope
    5           | expr
    6           | expr error last_scope

    7 last: "Quotations" "Last" "Quotations" "Assignment (:)" "Left Brace ({)" last_scope "Right Brace (})"
    8     | "Quotations" "Last" "Quotations" "Assignment (:)" "Boolean"
    9     | error

   10 order: content "Comma (,)" total_pages "Comma (,)" total_elements "Comma (,)" last "Comma (,)" number_of_elements "Comma (,)" sort "Comma (,)" first "Comma (,)" size "Comma (,)" number
   11      | error

   12 active: "Quotations" "Active" "Quotations" "Assignment (:)" "Left Brace ({)" active_scope "Right Brace (})"
   13       | error

   14 active_scope: ε
   15             | expr "Comma (,)" active_scope
   16             | expr
   17             | expr error active_scope

   18 wager_objects: columns "Comma (,)" wagers "Comma (,)" add_on
   19              | error

   20 columns: "Quotations" "Columns" "Quotations" "Assignment (:)" "Unsigned Integer"
   21        | error

   22 wagers: "Quotations" "Wagers" "Quotations" "Assignment (:)" "Unsigned Integer"
   23       | error

   24 add_on: ε
   25       | "Quotations" "Addon" "Quotations" "Assignment (:)" "Left Bracket ([)" "Right Bracket (])"
   26       | error

   27 price_points: "Left Brace ({)" "Quotations" "Amount" "Quotations" "Assignment (:)" "Unsigned Float" "Right Brace (})"
   28             | error

   29 list: "Quotations" "List" "Quotations" "Assignment (:)" u_int_array
   30     | error

   31 bonus: "Quotations" "Bonus" "Quotations" "Assignment (:)" u_int_array
   32      | error

   33 winning_numbers: "Left Brace ({)" list "Comma (,)" bonus "Right Brace (})"
   34                | error

   35 u_int_array: "Left Bracket ([)" u_int_scope "Right Bracket (])"
   36            | error

   37 u_int_scope: "Unsigned Integer" "Comma (,)" u_int_scope
   38            | "Unsigned Integer"
   39            | "Unsigned Integer" error u_int_scope

   40 json_string: "Quotations" "JSON String" "Quotations"
   41            | "Quotations" "Active" "Quotations"
   42            | error

   43 json_array: "Left Bracket ([)" json_arr_scope "Right Bracket (])"
   44           | error

   45 json_arr_scope: json_object "Comma (,)" json_arr_scope
   46               | json_object
   47               | json_object error json_arr_scope

   48 json_object: "Left Brace ({)" json_obj_scope "Right Brace (})"
   49            | error

   50 json_obj_scope: expr "Comma (,)" json_obj_scope
   51               | expr
   52               | expr error json_obj_scope

   53 content_scope: json_object "Comma (,)" content_scope
   54              | json_object
   55              | json_object error content_scope

   56 content: "Quotations" "Content" "Quotations" "Assignment (:)" "Left Bracket ([)" content_scope "Right Bracket (])"

   57 total_pages: "Quotations" "Total Pages" "Quotations" "Assignment (:)" "Unsigned Integer"
   58            | error

   59 total_elements: "Quotations" "Total Elements" "Quotations" "Assignment (:)" "Unsigned Integer"
   60               | error

   61 number_of_elements: "Quotations" "Number of Elements" "Quotations" "Assignment (:)" "Unsigned Integer"
   62                   | error

   63 sort: "Quotations" "Sort" "Quotations" "Assignment (:)" json_array
   64     | error

   65 expr: "Quotations" "GameID" "Quotations" "Assignment (:)" "Unsigned Integer"
   66     | "Quotations" "DrawID" "Quotations" "Assignment (:)" "Unsigned Integer"
   67     | "Quotations" "Draw Time" "Quotations" "Assignment (:)" "Unsigned Integer"
   68     | "Quotations" "Status" "Quotations" "Assignment (:)" json_string
   69     | "Quotations" "Draw Break" "Quotations" "Assignment (:)" "Unsigned Integer"
   70     | "Quotations" "Visual Draw" "Quotations" "Assignment (:)" "Unsigned Integer"
   71     | "Quotations" "Price Points" "Quotations" "Assignment (:)" price_points
   72     | "Quotations" "Winning Numbers" "Quotations" "Assignment (:)" winning_numbers
   73     | "Quotations" "Prize Categories" "Quotations" "Assignment (:)" json_array
   74     | "Quotations" "Wager Statistics" "Quotations" "Assignment (:)" "Left Brace ({)" wager_objects "Right Brace (})"
   75     | "Quotations" "ID" "Quotations" "Assignment (:)" "Unsigned Integer"
   76     | "Quotations" "Divident" "Quotations" "Assignment (:)" "Unsigned Float"
   77     | "Quotations" "Winners" "Quotations" "Assignment (:)" "Unsigned Integer"
   78     | "Quotations" "Distributed" "Quotations" "Assignment (:)" "Unsigned Float"
   79     | "Quotations" "Jackpot" "Quotations" "Assignment (:)" "Unsigned Float"
   80     | "Quotations" "Fixed" "Quotations" "Assignment (:)" "Unsigned Float"
   81     | "Quotations" "Category Type" "Quotations" "Assignment (:)" "Unsigned Integer"
   82     | "Quotations" "Game Type" "Quotations" "Assignment (:)" json_string
   83     | "Quotations" "Minimum Distributed" "Quotations" "Assignment (:)" "Unsigned Float"
   84     | "Quotations" "Direction" "Quotations" "Assignment (:)" json_string
   85     | "Quotations" "Property" "Quotations" "Assignment (:)" json_string
   86     | "Quotations" "Ignore Case" "Quotations" "Assignment (:)" "Boolean"
   87     | "Quotations" "Null Handling" "Quotations" "Assignment (:)" json_string
   88     | "Quotations" "Descending" "Quotations" "Assignment (:)" "Boolean"
   89     | "Quotations" "Ascending" "Quotations" "Assignment (:)" "Boolean"
   90     | error

   91 first: "Quotations" "First" "Quotations" "Assignment (:)" "Boolean"
   92      | error

   93 size: "Quotations" "Size" "Quotations" "Assignment (:)" "Unsigned Integer"
   94     | error

   95 number: "Quotations" "Number" "Quotations" "Assignment (:)" "Unsigned Integer"
   96       | error


Terminals, with rules where they appear

    T_EOF (0) 0
    error (256) 3 6 9 11 13 17 19 21 23 26 28 30 32 34 36 39 42 44 47 49 52 55 58 60 62 64 90 92 94 96
    "Unsigned Integer" (258) 20 22 37 38 39 57 59 61 65 66 67 69 70 75 77 81 93 95
    "Unsigned Float" (259) 27 76 78 79 80 83
    "GameID" (260) 65
    "Float" (261)
    "JSON String" (262) 40
    "Boolean" (263) 8 86 88 89 91
    "JSON Array" (264)
    "Left Brace ({)" (265) 1 2 7 12 27 33 48 74
    "Right Brace (})" (266) 1 2 7 12 27 33 48 74
    "Left Bracket ([)" (267) 25 35 43 56
    "Right Bracket (])" (268) 25 35 43 56
    "Dot (.)" (269)
    "Quotations" (270) 7 8 12 20 22 25 27 29 31 40 41 56 57 59 61 63 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 91 93 95
    "Assignment (:)" (271) 7 8 12 20 22 25 27 29 31 56 57 59 61 63 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 91 93 95
    "Comma (,)" (272) 1 4 10 15 18 33 37 45 50 53
    "Unsigned Integer Array" (273)
    "Last" (274) 7 8
    "Active" (275) 12 41
    "DrawID" (276) 66
    "Draw Time" (277) 67
    "Visual Draw" (278) 70
    "Price Points" (279) 71
    "Amount" (280) 27
    "Winning Numbers" (281) 72
    "List" (282) 29
    "Bonus" (283) 31
    "Prize Categories" (284) 73
    "ID" (285) 75
    "Divident" (286) 76
    "Winners" (287) 77
    "Distributed" (288) 78
    "Jackpot" (289) 79
    "Fixed" (290) 80
    "Category Type" (291) 81
    "Game Type" (292) 82
    "Minimum Distributed" (293) 83
    "Wager Statistics" (294) 74
    "Columns" (295) 20
    "Wagers" (296) 22
    "Sort" (297) 63
    "Direction" (298) 84
    "Number of Elements" (299) 61
    "Total Elements" (300) 59
    "Total Pages" (301) 57
    "Draw Break" (302) 69
    "Status" (303) 68
    "Content" (304) 56
    "Addon" (305) 25
    "Property" (306) 85
    "Ignore Case" (307) 86
    "Null Handling" (308) 87
    "Descending" (309) 88
    "Ascending" (310) 89
    "First" (311) 91
    "Size" (312) 93
    "Number" (313) 95
    "sign" (314)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    program (61)
        on left: 1 2 3
        on right: 0
    last_scope (62)
        on left: 4 5 6
        on right: 4 6 7
    last (63)
        on left: 7 8 9
        on right: 1 10
    order (64)
        on left: 10 11
        on right: 2
    active (65)
        on left: 12 13
        on right: 1
    active_scope (66)
        on left: 14 15 16 17
        on right: 12 15 17
    wager_objects (67)
        on left: 18 19
        on right: 74
    columns (68)
        on left: 20 21
        on right: 18
    wagers (69)
        on left: 22 23
        on right: 18
    add_on (70)
        on left: 24 25 26
        on right: 18
    price_points (71)
        on left: 27 28
        on right: 71
    list (72)
        on left: 29 30
        on right: 33
    bonus (73)
        on left: 31 32
        on right: 33
    winning_numbers (74)
        on left: 33 34
        on right: 72
    u_int_array (75)
        on left: 35 36
        on right: 29 31
    u_int_scope (76)
        on left: 37 38 39
        on right: 35 37 39
    json_string (77)
        on left: 40 41 42
        on right: 68 82 84 85 87
    json_array (78)
        on left: 43 44
        on right: 63 73
    json_arr_scope (79)
        on left: 45 46 47
        on right: 43 45 47
    json_object (80)
        on left: 48 49
        on right: 45 46 47 53 54 55
    json_obj_scope (81)
        on left: 50 51 52
        on right: 48 50 52
    content_scope (82)
        on left: 53 54 55
        on right: 53 55 56
    content (83)
        on left: 56
        on right: 10
    total_pages (84)
        on left: 57 58
        on right: 10
    total_elements (85)
        on left: 59 60
        on right: 10
    number_of_elements (86)
        on left: 61 62
        on right: 10
    sort (87)
        on left: 63 64
        on right: 10
    expr (88)
        on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 4 5 6 15 16 17 50 51 52
    first (89)
        on left: 91 92
        on right: 10
    size (90)
        on left: 93 94
        on right: 10
    number (91)
        on left: 95 96
        on right: 10


State 0

    0 $accept: • program T_EOF

    error             shift, and go to state 1
    "Left Brace ({)"  shift, and go to state 2

    program  go to state 3


State 1

    3 program: error •

    $default  reduce using rule 3 (program)


State 2

    1 program: "Left Brace ({)" • last "Comma (,)" active "Right Brace (})"
    2        | "Left Brace ({)" • order "Right Brace (})"

    error         shift, and go to state 4
    "Quotations"  shift, and go to state 5

    last     go to state 6
    order    go to state 7
    content  go to state 8


State 3

    0 $accept: program • T_EOF

    T_EOF  shift, and go to state 9


State 4

    9 last: error •
   11 order: error •

    "Right Brace (})"  reduce using rule 11 (order)
    $default           reduce using rule 9 (last)


State 5

    7 last: "Quotations" • "Last" "Quotations" "Assignment (:)" "Left Brace ({)" last_scope "Right Brace (})"
    8     | "Quotations" • "Last" "Quotations" "Assignment (:)" "Boolean"
   56 content: "Quotations" • "Content" "Quotations" "Assignment (:)" "Left Bracket ([)" content_scope "Right Bracket (])"

    "Last"     shift, and go to state 10
    "Content"  shift, and go to state 11


State 6

    1 program: "Left Brace ({)" last • "Comma (,)" active "Right Brace (})"

    "Comma (,)"  shift, and go to state 12


State 7

    2 program: "Left Brace ({)" order • "Right Brace (})"

    "Right Brace (})"  shift, and go to state 13


State 8

   10 order: content • "Comma (,)" total_pages "Comma (,)" total_elements "Comma (,)" last "Comma (,)" number_of_elements "Comma (,)" sort "Comma (,)" first "Comma (,)" size "Comma (,)" number

    "Comma (,)"  shift, and go to state 14


State 9

    0 $accept: program T_EOF •

    $default  accept


State 10

    7 last: "Quotations" "Last" • "Quotations" "Assignment (:)" "Left Brace ({)" last_scope "Right Brace (})"
    8     | "Quotations" "Last" • "Quotations" "Assignment (:)" "Boolean"

    "Quotations"  shift, and go to state 15


State 11

   56 content: "Quotations" "Content" • "Quotations" "Assignment (:)" "Left Bracket ([)" content_scope "Right Bracket (])"

    "Quotations"  shift, and go to state 16


State 12

    1 program: "Left Brace ({)" last "Comma (,)" • active "Right Brace (})"

    error         shift, and go to state 17
    "Quotations"  shift, and go to state 18

    active  go to state 19


State 13

    2 program: "Left Brace ({)" order "Right Brace (})" •

    $default  reduce using rule 2 (program)


State 14

   10 order: content "Comma (,)" • total_pages "Comma (,)" total_elements "Comma (,)" last "Comma (,)" number_of_elements "Comma (,)" sort "Comma (,)" first "Comma (,)" size "Comma (,)" number

    error         shift, and go to state 20
    "Quotations"  shift, and go to state 21

    total_pages  go to state 22


State 15

    7 last: "Quotations" "Last" "Quotations" • "Assignment (:)" "Left Brace ({)" last_scope "Right Brace (})"
    8     | "Quotations" "Last" "Quotations" • "Assignment (:)" "Boolean"

    "Assignment (:)"  shift, and go to state 23


State 16

   56 content: "Quotations" "Content" "Quotations" • "Assignment (:)" "Left Bracket ([)" content_scope "Right Bracket (])"

    "Assignment (:)"  shift, and go to state 24


State 17

   13 active: error •

    $default  reduce using rule 13 (active)


State 18

   12 active: "Quotations" • "Active" "Quotations" "Assignment (:)" "Left Brace ({)" active_scope "Right Brace (})"

    "Active"  shift, and go to state 25


State 19

    1 program: "Left Brace ({)" last "Comma (,)" active • "Right Brace (})"

    "Right Brace (})"  shift, and go to state 26


State 20

   58 total_pages: error •

    $default  reduce using rule 58 (total_pages)


State 21

   57 total_pages: "Quotations" • "Total Pages" "Quotations" "Assignment (:)" "Unsigned Integer"

    "Total Pages"  shift, and go to state 27


State 22

   10 order: content "Comma (,)" total_pages • "Comma (,)" total_elements "Comma (,)" last "Comma (,)" number_of_elements "Comma (,)" sort "Comma (,)" first "Comma (,)" size "Comma (,)" number

    "Comma (,)"  shift, and go to state 28


State 23

    7 last: "Quotations" "Last" "Quotations" "Assignment (:)" • "Left Brace ({)" last_scope "Right Brace (})"
    8     | "Quotations" "Last" "Quotations" "Assignment (:)" • "Boolean"

    "Boolean"         shift, and go to state 29
    "Left Brace ({)"  shift, and go to state 30


State 24

   56 content: "Quotations" "Content" "Quotations" "Assignment (:)" • "Left Bracket ([)" content_scope "Right Bracket (])"

    "Left Bracket ([)"  shift, and go to state 31


State 25

   12 active: "Quotations" "Active" • "Quotations" "Assignment (:)" "Left Brace ({)" active_scope "Right Brace (})"

    "Quotations"  shift, and go to state 32


State 26

    1 program: "Left Brace ({)" last "Comma (,)" active "Right Brace (})" •

    $default  reduce using rule 1 (program)


State 27

   57 total_pages: "Quotations" "Total Pages" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 33


State 28

   10 order: content "Comma (,)" total_pages "Comma (,)" • total_elements "Comma (,)" last "Comma (,)" number_of_elements "Comma (,)" sort "Comma (,)" first "Comma (,)" size "Comma (,)" number

    error         shift, and go to state 34
    "Quotations"  shift, and go to state 35

    total_elements  go to state 36


State 29

    8 last: "Quotations" "Last" "Quotations" "Assignment (:)" "Boolean" •

    $default  reduce using rule 8 (last)


State 30

    7 last: "Quotations" "Last" "Quotations" "Assignment (:)" "Left Brace ({)" • last_scope "Right Brace (})"

    error         shift, and go to state 37
    "Quotations"  shift, and go to state 38

    last_scope  go to state 39
    expr        go to state 40


State 31

   56 content: "Quotations" "Content" "Quotations" "Assignment (:)" "Left Bracket ([)" • content_scope "Right Bracket (])"

    error             shift, and go to state 41
    "Left Brace ({)"  shift, and go to state 42

    json_object    go to state 43
    content_scope  go to state 44


State 32

   12 active: "Quotations" "Active" "Quotations" • "Assignment (:)" "Left Brace ({)" active_scope "Right Brace (})"

    "Assignment (:)"  shift, and go to state 45


State 33

   57 total_pages: "Quotations" "Total Pages" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 46


State 34

   60 total_elements: error •

    $default  reduce using rule 60 (total_elements)


State 35

   59 total_elements: "Quotations" • "Total Elements" "Quotations" "Assignment (:)" "Unsigned Integer"

    "Total Elements"  shift, and go to state 47


State 36

   10 order: content "Comma (,)" total_pages "Comma (,)" total_elements • "Comma (,)" last "Comma (,)" number_of_elements "Comma (,)" sort "Comma (,)" first "Comma (,)" size "Comma (,)" number

    "Comma (,)"  shift, and go to state 48


State 37

   90 expr: error •

    $default  reduce using rule 90 (expr)


State 38

   65 expr: "Quotations" • "GameID" "Quotations" "Assignment (:)" "Unsigned Integer"
   66     | "Quotations" • "DrawID" "Quotations" "Assignment (:)" "Unsigned Integer"
   67     | "Quotations" • "Draw Time" "Quotations" "Assignment (:)" "Unsigned Integer"
   68     | "Quotations" • "Status" "Quotations" "Assignment (:)" json_string
   69     | "Quotations" • "Draw Break" "Quotations" "Assignment (:)" "Unsigned Integer"
   70     | "Quotations" • "Visual Draw" "Quotations" "Assignment (:)" "Unsigned Integer"
   71     | "Quotations" • "Price Points" "Quotations" "Assignment (:)" price_points
   72     | "Quotations" • "Winning Numbers" "Quotations" "Assignment (:)" winning_numbers
   73     | "Quotations" • "Prize Categories" "Quotations" "Assignment (:)" json_array
   74     | "Quotations" • "Wager Statistics" "Quotations" "Assignment (:)" "Left Brace ({)" wager_objects "Right Brace (})"
   75     | "Quotations" • "ID" "Quotations" "Assignment (:)" "Unsigned Integer"
   76     | "Quotations" • "Divident" "Quotations" "Assignment (:)" "Unsigned Float"
   77     | "Quotations" • "Winners" "Quotations" "Assignment (:)" "Unsigned Integer"
   78     | "Quotations" • "Distributed" "Quotations" "Assignment (:)" "Unsigned Float"
   79     | "Quotations" • "Jackpot" "Quotations" "Assignment (:)" "Unsigned Float"
   80     | "Quotations" • "Fixed" "Quotations" "Assignment (:)" "Unsigned Float"
   81     | "Quotations" • "Category Type" "Quotations" "Assignment (:)" "Unsigned Integer"
   82     | "Quotations" • "Game Type" "Quotations" "Assignment (:)" json_string
   83     | "Quotations" • "Minimum Distributed" "Quotations" "Assignment (:)" "Unsigned Float"
   84     | "Quotations" • "Direction" "Quotations" "Assignment (:)" json_string
   85     | "Quotations" • "Property" "Quotations" "Assignment (:)" json_string
   86     | "Quotations" • "Ignore Case" "Quotations" "Assignment (:)" "Boolean"
   87     | "Quotations" • "Null Handling" "Quotations" "Assignment (:)" json_string
   88     | "Quotations" • "Descending" "Quotations" "Assignment (:)" "Boolean"
   89     | "Quotations" • "Ascending" "Quotations" "Assignment (:)" "Boolean"

    "GameID"               shift, and go to state 49
    "DrawID"               shift, and go to state 50
    "Draw Time"            shift, and go to state 51
    "Visual Draw"          shift, and go to state 52
    "Price Points"         shift, and go to state 53
    "Winning Numbers"      shift, and go to state 54
    "Prize Categories"     shift, and go to state 55
    "ID"                   shift, and go to state 56
    "Divident"             shift, and go to state 57
    "Winners"              shift, and go to state 58
    "Distributed"          shift, and go to state 59
    "Jackpot"              shift, and go to state 60
    "Fixed"                shift, and go to state 61
    "Category Type"        shift, and go to state 62
    "Game Type"            shift, and go to state 63
    "Minimum Distributed"  shift, and go to state 64
    "Wager Statistics"     shift, and go to state 65
    "Direction"            shift, and go to state 66
    "Draw Break"           shift, and go to state 67
    "Status"               shift, and go to state 68
    "Property"             shift, and go to state 69
    "Ignore Case"          shift, and go to state 70
    "Null Handling"        shift, and go to state 71
    "Descending"           shift, and go to state 72
    "Ascending"            shift, and go to state 73


State 39

    7 last: "Quotations" "Last" "Quotations" "Assignment (:)" "Left Brace ({)" last_scope • "Right Brace (})"

    "Right Brace (})"  shift, and go to state 74


State 40

    4 last_scope: expr • "Comma (,)" last_scope
    5           | expr •
    6           | expr • error last_scope

    error        shift, and go to state 75
    "Comma (,)"  shift, and go to state 76

    "Right Brace (})"  reduce using rule 5 (last_scope)


State 41

   49 json_object: error •

    $default  reduce using rule 49 (json_object)


State 42

   48 json_object: "Left Brace ({)" • json_obj_scope "Right Brace (})"

    error         shift, and go to state 37
    "Quotations"  shift, and go to state 38

    json_obj_scope  go to state 77
    expr            go to state 78


State 43

   53 content_scope: json_object • "Comma (,)" content_scope
   54              | json_object •
   55              | json_object • error content_scope

    error        shift, and go to state 79
    "Comma (,)"  shift, and go to state 80

    "Right Bracket (])"  reduce using rule 54 (content_scope)


State 44

   56 content: "Quotations" "Content" "Quotations" "Assignment (:)" "Left Bracket ([)" content_scope • "Right Bracket (])"

    "Right Bracket (])"  shift, and go to state 81


State 45

   12 active: "Quotations" "Active" "Quotations" "Assignment (:)" • "Left Brace ({)" active_scope "Right Brace (})"

    "Left Brace ({)"  shift, and go to state 82


State 46

   57 total_pages: "Quotations" "Total Pages" "Quotations" "Assignment (:)" • "Unsigned Integer"

    "Unsigned Integer"  shift, and go to state 83


State 47

   59 total_elements: "Quotations" "Total Elements" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 84


State 48

   10 order: content "Comma (,)" total_pages "Comma (,)" total_elements "Comma (,)" • last "Comma (,)" number_of_elements "Comma (,)" sort "Comma (,)" first "Comma (,)" size "Comma (,)" number

    error         shift, and go to state 85
    "Quotations"  shift, and go to state 86

    last  go to state 87


State 49

   65 expr: "Quotations" "GameID" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 88


State 50

   66 expr: "Quotations" "DrawID" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 89


State 51

   67 expr: "Quotations" "Draw Time" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 90


State 52

   70 expr: "Quotations" "Visual Draw" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 91


State 53

   71 expr: "Quotations" "Price Points" • "Quotations" "Assignment (:)" price_points

    "Quotations"  shift, and go to state 92


State 54

   72 expr: "Quotations" "Winning Numbers" • "Quotations" "Assignment (:)" winning_numbers

    "Quotations"  shift, and go to state 93


State 55

   73 expr: "Quotations" "Prize Categories" • "Quotations" "Assignment (:)" json_array

    "Quotations"  shift, and go to state 94


State 56

   75 expr: "Quotations" "ID" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 95


State 57

   76 expr: "Quotations" "Divident" • "Quotations" "Assignment (:)" "Unsigned Float"

    "Quotations"  shift, and go to state 96


State 58

   77 expr: "Quotations" "Winners" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 97


State 59

   78 expr: "Quotations" "Distributed" • "Quotations" "Assignment (:)" "Unsigned Float"

    "Quotations"  shift, and go to state 98


State 60

   79 expr: "Quotations" "Jackpot" • "Quotations" "Assignment (:)" "Unsigned Float"

    "Quotations"  shift, and go to state 99


State 61

   80 expr: "Quotations" "Fixed" • "Quotations" "Assignment (:)" "Unsigned Float"

    "Quotations"  shift, and go to state 100


State 62

   81 expr: "Quotations" "Category Type" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 101


State 63

   82 expr: "Quotations" "Game Type" • "Quotations" "Assignment (:)" json_string

    "Quotations"  shift, and go to state 102


State 64

   83 expr: "Quotations" "Minimum Distributed" • "Quotations" "Assignment (:)" "Unsigned Float"

    "Quotations"  shift, and go to state 103


State 65

   74 expr: "Quotations" "Wager Statistics" • "Quotations" "Assignment (:)" "Left Brace ({)" wager_objects "Right Brace (})"

    "Quotations"  shift, and go to state 104


State 66

   84 expr: "Quotations" "Direction" • "Quotations" "Assignment (:)" json_string

    "Quotations"  shift, and go to state 105


State 67

   69 expr: "Quotations" "Draw Break" • "Quotations" "Assignment (:)" "Unsigned Integer"

    "Quotations"  shift, and go to state 106


State 68

   68 expr: "Quotations" "Status" • "Quotations" "Assignment (:)" json_string

    "Quotations"  shift, and go to state 107


State 69

   85 expr: "Quotations" "Property" • "Quotations" "Assignment (:)" json_string

    "Quotations"  shift, and go to state 108


State 70

   86 expr: "Quotations" "Ignore Case" • "Quotations" "Assignment (:)" "Boolean"

    "Quotations"  shift, and go to state 109


State 71

   87 expr: "Quotations" "Null Handling" • "Quotations" "Assignment (:)" json_string

    "Quotations"  shift, and go to state 110


State 72

   88 expr: "Quotations" "Descending" • "Quotations" "Assignment (:)" "Boolean"

    "Quotations"  shift, and go to state 111


State 73

   89 expr: "Quotations" "Ascending" • "Quotations" "Assignment (:)" "Boolean"

    "Quotations"  shift, and go to state 112


State 74

    7 last: "Quotations" "Last" "Quotations" "Assignment (:)" "Left Brace ({)" last_scope "Right Brace (})" •

    $default  reduce using rule 7 (last)


State 75

    6 last_scope: expr error • last_scope

    error         shift, and go to state 37
    "Quotations"  shift, and go to state 38

    last_scope  go to state 113
    expr        go to state 40


State 76

    4 last_scope: expr "Comma (,)" • last_scope

    error         shift, and go to state 37
    "Quotations"  shift, and go to state 38

    last_scope  go to state 114
    expr        go to state 40


State 77

   48 json_object: "Left Brace ({)" json_obj_scope • "Right Brace (})"

    "Right Brace (})"  shift, and go to state 115


State 78

   50 json_obj_scope: expr • "Comma (,)" json_obj_scope
   51               | expr •
   52               | expr • error json_obj_scope

    error        shift, and go to state 116
    "Comma (,)"  shift, and go to state 117

    "Right Brace (})"  reduce using rule 51 (json_obj_scope)


State 79

   55 content_scope: json_object error • content_scope

    error             shift, and go to state 41
    "Left Brace ({)"  shift, and go to state 42

    json_object    go to state 43
    content_scope  go to state 118


State 80

   53 content_scope: json_object "Comma (,)" • content_scope

    error             shift, and go to state 41
    "Left Brace ({)"  shift, and go to state 42

    json_object    go to state 43
    content_scope  go to state 119


State 81

   56 content: "Quotations" "Content" "Quotations" "Assignment (:)" "Left Bracket ([)" content_scope "Right Bracket (])" •

    $default  reduce using rule 56 (content)


State 82

   12 active: "Quotations" "Active" "Quotations" "Assignment (:)" "Left Brace ({)" • active_scope "Right Brace (})"

    error         shift, and go to state 37
    "Quotations"  shift, and go to state 38

    "Right Brace (})"  reduce using rule 14 (active_scope)

    active_scope  go to state 120
    expr          go to state 121


State 83

   57 total_pages: "Quotations" "Total Pages" "Quotations" "Assignment (:)" "Unsigned Integer" •

    $default  reduce using rule 57 (total_pages)


State 84

   59 total_elements: "Quotations" "Total Elements" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 122


State 85

    9 last: error •

    $default  reduce using rule 9 (last)


State 86

    7 last: "Quotations" • "Last" "Quotations" "Assignment (:)" "Left Brace ({)" last_scope "Right Brace (})"
    8     | "Quotations" • "Last" "Quotations" "Assignment (:)" "Boolean"

    "Last"  shift, and go to state 10


State 87

   10 order: content "Comma (,)" total_pages "Comma (,)" total_elements "Comma (,)" last • "Comma (,)" number_of_elements "Comma (,)" sort "Comma (,)" first "Comma (,)" size "Comma (,)" number

    "Comma (,)"  shift, and go to state 123


State 88

   65 expr: "Quotations" "GameID" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 124


State 89

   66 expr: "Quotations" "DrawID" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 125


State 90

   67 expr: "Quotations" "Draw Time" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 126


State 91

   70 expr: "Quotations" "Visual Draw" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 127


State 92

   71 expr: "Quotations" "Price Points" "Quotations" • "Assignment (:)" price_points

    "Assignment (:)"  shift, and go to state 128


State 93

   72 expr: "Quotations" "Winning Numbers" "Quotations" • "Assignment (:)" winning_numbers

    "Assignment (:)"  shift, and go to state 129


State 94

   73 expr: "Quotations" "Prize Categories" "Quotations" • "Assignment (:)" json_array

    "Assignment (:)"  shift, and go to state 130


State 95

   75 expr: "Quotations" "ID" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 131


State 96

   76 expr: "Quotations" "Divident" "Quotations" • "Assignment (:)" "Unsigned Float"

    "Assignment (:)"  shift, and go to state 132


State 97

   77 expr: "Quotations" "Winners" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 133


State 98

   78 expr: "Quotations" "Distributed" "Quotations" • "Assignment (:)" "Unsigned Float"

    "Assignment (:)"  shift, and go to state 134


State 99

   79 expr: "Quotations" "Jackpot" "Quotations" • "Assignment (:)" "Unsigned Float"

    "Assignment (:)"  shift, and go to state 135


State 100

   80 expr: "Quotations" "Fixed" "Quotations" • "Assignment (:)" "Unsigned Float"

    "Assignment (:)"  shift, and go to state 136


State 101

   81 expr: "Quotations" "Category Type" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 137


State 102

   82 expr: "Quotations" "Game Type" "Quotations" • "Assignment (:)" json_string

    "Assignment (:)"  shift, and go to state 138


State 103

   83 expr: "Quotations" "Minimum Distributed" "Quotations" • "Assignment (:)" "Unsigned Float"

    "Assignment (:)"  shift, and go to state 139


State 104

   74 expr: "Quotations" "Wager Statistics" "Quotations" • "Assignment (:)" "Left Brace ({)" wager_objects "Right Brace (})"

    "Assignment (:)"  shift, and go to state 140


State 105

   84 expr: "Quotations" "Direction" "Quotations" • "Assignment (:)" json_string

    "Assignment (:)"  shift, and go to state 141


State 106

   69 expr: "Quotations" "Draw Break" "Quotations" • "Assignment (:)" "Unsigned Integer"

    "Assignment (:)"  shift, and go to state 142


State 107

   68 expr: "Quotations" "Status" "Quotations" • "Assignment (:)" json_string

    "Assignment (:)"  shift, and go to state 143


State 108

   85 expr: "Quotations" "Property" "Quotations" • "Assignment (:)" json_string

    "Assignment (:)"  shift, and go to state 144


State 109

   86 expr: "Quotations" "Ignore Case" "Quotations" • "Assignment (:)" "Boolean"

    "Assignment (:)"  shift, and go to state 145


State 110

   87 expr: "Quotations" "Null Handling" "Quotations" • "Assignment (:)" json_string

    "Assignment (:)"  shift, and go to state 146


State 111

   88 expr: "Quotations" "Descending" "Quotations" • "Assignment (:)" "Boolean"

    "Assignment (:)"  shift, and go to state 147


State 112

   89 expr: "Quotations" "Ascending" "Quotations" • "Assignment (:)" "Boolean"

    "Assignment (:)"  shift, and go to state 148


State 113

    6 last_scope: expr error last_scope •

    $default  reduce using rule 6 (last_scope)


State 114

    4 last_scope: expr "Comma (,)" last_scope •

    $default  reduce using rule 4 (last_scope)


State 115

   48 json_object: "Left Brace ({)" json_obj_scope "Right Brace (})" •

    $default  reduce using rule 48 (json_object)


State 116
